@@ -476,7 +476,7 @@ CREATE TABLE `run` (
   `priority` tinyint(3) unsigned NOT NULL DEFAULT '0',
   `actual_cycle_count` bigint(20) unsigned DEFAULT NULL,
   `expected_cycle_count` bigint(20) unsigned DEFAULT NULL,
-  `id_run_pair` bigint(20) unsigned DEFAULT NULL,
+  `id_run_pair` bigint(20) unsigned NOT NULL DEFAULT 0,
   `is_paired` tinyint(3) unsigned NOT NULL DEFAULT '0',
   `batch_id` bigint(20) unsigned DEFAULT '0',
   `id_instrument_format` bigint(20) unsigned NOT NULL,
