@@ -80,6 +80,7 @@ my $util = t::util->new({fixtures  => 1,});
 			     util           => $util,
 			     cgi_params     => {
 						id_instrument        => 3,
+            id_run_pair          => 0,
 						team                 => 'RAD',
 						batch_id             => 42,
 						tracks               => 3,
@@ -118,6 +119,7 @@ my $util = t::util->new({fixtures  => 1,});
 			      util           => $util,
 			      cgi_params     => {
 						 id_instrument        => 3,
+             id_run_pair          => 0,
 						 team                 => 'RAD',
 						 batch_id             => 42,
 						 tracks               => 3,
@@ -126,6 +128,9 @@ my $util = t::util->new({fixtures  => 1,});
 						 priority             => 1,
 						},
 			     });
+diag("***");
+diag($str);
+diag("***");
   ok($util->test_rendered($str, 't/data/rendered/run/16;update_xml'), 'loader update_xml');
 }
 
@@ -320,6 +325,7 @@ my $util = t::util->new({fixtures  => 1,});
 			       util           => $util,
 			       cgi_params     => {
 						  id_instrument        => 3,
+              id_run_pair          => 0,
 						  team                 => 'RAD',
 						  batch_id             => 42,
 						  tracks               => 3,
@@ -352,6 +358,7 @@ my $util = t::util->new({fixtures  => 1,});
 			       util           => $util,
 			       cgi_params     => {
 						  id_instrument        => 3,
+              id_run_pair          => 0,
 						  batch_id             => 42,
 						  tracks               => 3,
 						  lane_1_tile_count    => 330,
@@ -386,6 +393,7 @@ my $util = t::util->new({fixtures  => 1,});
 			       util           => $util,
 			       cgi_params     => {
 						  id_instrument        => 3,
+              id_run_pair          => 0,
 						  team                 => 'RAD',
 						  batch_id             => 42,
 						  tracks               => 3,
