@@ -1,5 +1,5 @@
 <form id="run_create_form" name="run_create_form" method="post" action="/cgi-bin/npg/run" onsubmit="return check_run();">
-<input type="hidden" value="no" id="id_run_pair" name="id_run_pair" />
+<input type="hidden" id="id_run_pair" name="id_run_pair" value="0"/>
 <input type="hidden" id="expected_cycle_count" name="expected_cycle_count" value="0" />
 <input type="hidden" id="priority" name="priority" value="1" />
 <input type="hidden" name="library_names" id="library_names" />
