@@ -2,7 +2,7 @@ X-Generated-By: npg::controller
 Content-type: text/xml
 
 <?xml version="1.0" encoding="utf-8"?>
-<run id_run="16" batch_id="42" id_instrument="3" expected_cycle_count="37" actual_cycle_count="0" priority="1" is_paired="1" team="RAD" id_instrument_format="4" name="IL1_00016" loader="" loading_date="" run_folder="000000_IL1_00016">
+<run id_run="16" batch_id="42" id_instrument="3" expected_cycle_count="37" actual_cycle_count="0" priority="1" id_run_pair="0" is_paired="1" team="RAD" id_instrument_format="4" name="IL1_00016" loader="" loading_date="" run_folder="000000_IL1_00016">
  <instrument id_instrument="3" name="IL1" id_instrument_format="4" external_name="eas15" serial="" iscurrent="0" />
  <run_lanes></run_lanes>
  <current_run_status id_run_status="19" id_run="16" date="2007-06-05 12:33:27" id_run_status_dict="2" id_user="1" username="joe_admin" iscurrent="1" description="run in progress" />
