@@ -1,5 +1,7 @@
 CHANGES
 
+- Remove id_run_pair from template. In the run table, make the default 0 and the field not null
+
 release 75.6
  - extended inline index to read 2
  - hardcoded link for enigmatic authentication (not mod perl url) page so that the page
